--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -103,9 +103,11 @@ body {
 }
 .portada_main{
    margin: auto;
-   max-width: 1200px;
+   
    display: flex;
-   flex-flow: wrap row;
+   flex-flow: row wrap;
+   
+
    height: 100%;
    
 }
@@ -115,6 +117,7 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     margin: auto;
+    
 }
 .portada_title h1{
    font-size: 50px;
@@ -129,8 +132,6 @@ body {
     display: flex;
     height: 100%;
     justify-content: end;
-   
-    
 }
 .portada_img img{
     margin: auto;
@@ -629,12 +630,7 @@ body {
 @media(max-width: 715px){
   
 }
-@media(max-width: 1160px){
-  .portada_main{
-    display: flex;
-    flex-direction: column-reverse;
-  }
-}
+
 @media(max-width: 664px){
   .portada_title{
     text-align: center;
@@ -651,11 +647,26 @@ body {
     width: 100%;
   }
   .portada_img{
-    width: 100%;
-    flex-wrap: wrap; 
+    margin-top: 50px;
+  
+    width: 100%; 
+  }
+  .portada_img img{
+    height: 300px;
+    width: 400px;
   }
   .contact-form form{
     display: block;
+  }
+}
+@media(max-width: 400px){
+  .portada_img{
+    margin-top: 50px;
+    width: 100%; 
+  }
+  .portada_img img{
+    height: 300px;
+    width: 350px; 
   }
 }
 @media(max-width: 1200px){
@@ -668,6 +679,12 @@ body {
    height: 100%;
    max-height: 100%;
   }
+  .portada_main{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  
+  
   
 }
 @media(max-width: 800px){
@@ -679,6 +696,7 @@ body {
     padding-top:500px ;
   }
   .container-proyectos{
+    margin-top: 500px;
     background: linear-gradient(to right, #2c3e50, #2980b9)
   }
  
